Logging to file

--- a/map/src/main/res/values/strings.xml
+++ b/map/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="around_you">Around you</string>
     <string name="my_location">My location</string>
+    <string name="upload">Upload</string>
 </resources>
