Listening for GPS events

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_map">Map</string>
     <string name="title_catalogue">Animals</string>
     <string name="title_planner">Planner</string>
+    <string name="permission_required_text">GPS Permission required</string>
 </resources>
