--- a/map/src/main/res/values/strings.xml
+++ b/map/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="around_you">Around you</string>
     <string name="my_location">My location</string>
     <string name="upload">Upload</string>
+    <string name="location_unavailable">Location unavailable</string>
 </resources>
