--- a/map/src/main/res/values/strings.xml
+++ b/map/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="my_location">My location</string>
     <string name="upload">Upload</string>
     <string name="location_unavailable">Location unavailable</string>
+    <string name="gps_permission_rationale_title">Tracing Permission</string>
+    <string name="gps_permission_rationale_content">We will use your current GPS permission to show you journey progress. Application will store only data inside ZOO.</string>
+    <string name="gps_permission_denied_title">Tracing Permission</string>
+    <string name="gps_permission_denied_content">You Denied Tracking Permission for that app permanently. You can change it in Settings.</string>
 </resources>
