--- a/presentation-map/src/main/res/values/strings.xml
+++ b/presentation-map/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="around_you">Around you</string>
     <string name="my_location">My location</string>
     <string name="upload">Upload</string>
+    <string name="selected">Selected</string>
     <string name="gps_permission_rationale_title">Tracing Permission</string>
     <string name="gps_permission_rationale_content">We will use your current GPS permission to show you journey progress. Application will store only data inside ZOO.</string>
     <string name="gps_permission_denied_title">Tracing Permission</string>
