--- a/presentation-core/src/main/res/values/strings.xml
+++ b/presentation-core/src/main/res/values/strings.xml
@@ -2,4 +2,60 @@
 <resources>
     <string name="close">Close</string>
     <string name="back">Back</string>
+
+    <string name="wejscie">wejscie</string>
+    <string name="wyjscie">wyjscie</string>
+    <string name="bazanty_papugi">Bażanty i papugi</string>
+    <string name="pazurzatki">Pazurzatki</string>
+    <string name="flamingi">Flamingi</string>
+    <string name="surykatki">Surykatki</string>
+    <string name="ptaki_w_wolierach">Ptaki w wolierach</string>
+    <string name="ptaki_wodne_duzy_staw">Duży staw</string>
+    <string name="wydry">Wydry</string>
+    <string name="srednie_koty">Średnie koty</string>
+    <string name="jezozwierze_psowate">Jeżozwierze i Psowate</string>
+    <string name="wilki">Wilki</string>
+    <string name="tapiry_strusie_zebry">Tapiry, strusie i zebry</string>
+    <string name="male_drapiezniki">Małe drapieżniki</string>
+    <string name="wielkie_koty">Wielkie koty</string>
+    <string name="ptaki_wodne_maly_staw">Mały staw</string>
+    <string name="wielblady_i_gwanko">Wielblady i gwanko</string>
+    <string name="kob_sniady">Kob Śniady</string>
+    <string name="eland">Eland</string>
+    <string name="pingwiny">Pingwiny</string>
+    <string name="kangury_i_strusie_emu">Kangury i strusie emu</string>
+    <string name="addaks">Addaks</string>
+    <string name="takin_miszmi">Takin miszmi</string>
+    <string name="renifer">Renifer</string>
+    <string name="sitatunga">Sitatunga</string>
+    <string name="kob_liczi">Kob liczi</string>
+    <string name="uchatka_patagonska">Uchatka patagońska</string>
+    <string name="panda_mala">Panda mała</string>
+    <string name="arui">Arui</string>
+    <string name="zyrafy">Żyrafy</string>
+    <string name="manul">Manul</string>
+    <string name="kulany">Kulany</string>
+    <string name="jelenie">Jelenie</string>
+    <string name="nilgau_markury">Nilgau markury</string>
+    <string name="daniele_barasinga">Daniele barasinga</string>
+    <string name="gastronomia">Gastronomia</string>
+    <string name="lemury">Lemury</string>
+    <string name="orly">Orły</string>
+    <string name="osly">Osły</string>
+    <string name="milu">Milu</string>
+    <string name="myszojelen">Mundżak Chiński</string>
+    <string name="mini_zoo">Mini ZOO</string>
+    <string name="ul">Ul</string>
+    <string name="kondory">Kondory</string>
+    <string name="zurawie_mandzurskie">Żurawie mandżurskie</string>
+    <string name="nocny_pawilon">Nocny pawilon</string>
+    <string name="srednie_drapiezniki">Średnie drapieżniki</string>
+    <string name="sowy">Sowy</string>
+    <string name="przewalskiego">Konie Przewalskiego</string>
+    <string name="wikunie">Wikunie</string>
+    <string name="hipopotamy">Hipopotamy</string>
+    <string name="malpy">Małpy</string>
+    <string name="egzotarium">Egzotarium</string>
+    <string name="slonie">Słonie</string>
+    <string name="wc">WC</string>
 </resources>
