placeholder for planner

--- a/presentation-planner/src/main/res/values/strings.xml
+++ b/presentation-planner/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="remove_from_plan">Remove from plan</string>
+    <string name="planner_empty_text">Your plan is empty.\nAdd animals or select predefined plan.</string>
 </resources>
