--- a/tracking/src/main/res/values/strings.xml
+++ b/tracking/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="notification_channel_name">Zoo Application</string>
     <string name="notification_channel_description">Foreground services of Zoo App</string>
     <string name="location_service_stop_text">Stop tracking</string>
+    <string name="gps_permission_rationale_title">Tracing Permission</string>
+    <string name="gps_permission_rationale_content">We will use your current GPS permission to show you journey progress. Application will store only data inside ZOO.</string>
+    <string name="gps_permission_denied_title">Tracing Permission</string>
+    <string name="gps_permission_denied_content">You Denied Tracking Permission for that app permanently. You can change it in Settings.</string>
 </resources>
