--- a/presentation-planner/src/main/res/values/strings.xml
+++ b/presentation-planner/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="remove_from_plan">Remove from plan</string>
     <string name="unlock">Unlock</string>
+    <string name="unsee">Meet again</string>
     <string name="planner_empty_text">Your plan is empty.\nAdd animals or select predefined plan.</string>
     <string name="exit">Exit</string>
 </resources>
