--- a/presentation-planner/src/main/res/values/strings.xml
+++ b/presentation-planner/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="unsee_dialog_button_confirm">Yes</string>
     <string name="planner_title">Your trip</string>
     <string name="planner_description">There are animals you added to the trip. We will navigate you through the ZOO by shortest path, but take your time. You can always modify that list.</string>
+    <string name="planner_suggestion_title">Suggested stages</string>
+    <string name="add_exit">Exit</string>
 </resources>
