--- a/presentation-catalogue/src/main/res/values/strings.xml
+++ b/presentation-catalogue/src/main/res/values/strings.xml
@@ -26,4 +26,12 @@
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
+
+    <string name="bird">Bird</string>
+    <string name="mammal">Mammal</string>
+    <string name="amphibian">Amphibian</string>
+    <string name="reptile">Reptile</string>
+    <string name="fish">Fish</string>
+    <string name="arthropod">Arthropod</string>
+    <string name="mollusk">Mollusk</string>
 </resources>
