bottom navigation data

--- a/presentation-map/src/main/res/values/strings.xml
+++ b/presentation-map/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="upload">Upload</string>
     <string name="selected">Selected</string>
     <string name="title_map">Map</string>
+    <string name="title_planner">Planner</string>
+    <string name="title_animal">Animal</string>
     <string name="wc">WC</string>
     <string name="restaurant">Restaurant</string>
     <string name="exit">Exit</string>
